--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="meOnBike.png"></td>
+        <td><img src="https://github.com/edwardsharnock/Test/blob/main/meOnBike.PNG"></td>
           <td><h1> <a href="https://www.youtube.com/watch?v=SRBxBEN9mHU">Edward Sharnock</a></h1>
           <p>Professional Idiot || Spender Of Money</p></td>
       </tr>
